proper identity preselection + fix layout issue in decklist

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -559,15 +559,12 @@ a.button, button
       padding: 5px 15px
 
     .decklist
-      .deck-name
-        float: left
-
+      position: relative
       button
+        position: absolute
+        top: 10px
+        right: 20px
         width: 70px
-        float: right
-
-      .cards
-        clear: both
 
     .deckedit
       .name, .lookup
